Use more List.of